add modal pop up click event to recipes card

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <!-- Modal Trigger -->
 
 
-    <script type="text/javaScript">
+    <!-- <script type="text/javaScript">
     
   document.addEventListener('DOMContentLoaded', function() {
     var elems = document.querySelectorAll('.modal');
@@ -155,11 +155,11 @@
   });
 
 
-      // $(document).ready(function(){
-      //   $('.modal').modal();
-      // });
+      $(document).ready(function(){
+        $('.modal').modal();
+      });
           
-    </script>
+    </script> -->
 
     <!-- Modal trigger end -->
   </body>
