--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
 
    <!-- Modal Structure -->
    <div id="modal1" class="modal">
+    <div class="modal-header">
+        
+    </div>
     <div class="modal-content">
       <h4>Tutorialsplane.com</h4>
       <p>Learn more @ tutorialsplane.com!</p>
