Sticky header in modal

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <!-- Modal for About Reci-Bits -->
 
     <!-- Modal for detail recipe ingredients and instructions -->
-    <div id="modal1" class="modal">
+    <div id="modal1" class="modal modal-fixed-header">
       <div class="modal-header" id="recipe-modal-header">
 
       </div>
