removed button clas and recently save from carouse

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
       </nav>
 
       
+
+
       <!-- Search bar/ input start-->
 
       <div class="search-text"> 
@@ -68,7 +70,18 @@
       </div><dat</datagrid></dat>
       <!-- Search bar end --> 
 
-      
+      <!-- carousel for saved recipe -->
+      <!-- <div>Recently Saved:</div> -->
+      <div class="carousel-container">
+        <button class="left-button"><i class="fas fa-chevron-left "></i></button>
+          <div class="wrapper">
+            <div id="saved-recipe-carousel">
+              <div class="saved-recipe-carousel-card"></div>
+            </div>
+          </div>
+        <button class="right-button"><i class="fas fa-chevron-right"></i></button>
+      </div>
+      <!-- carousel for saved recipe -->
   
       <!--Cart list plus button -->
       <div class="container">
