enter button and save only once

--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
                   <textarea id="textarea1" class="materialize-textarea" placeholder="What is in your Fridge?"></textarea>
                   <button id="btnadd" type="button"><i class="fas fa-plus"></i> </button>
                 </div>
+                
               </div>
+              <span id="alertspan"></span>
             </form>
           </div>
         </div>
