added css to modal

--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
 
       <nav>
         <div class="nav-wrapper">
-          <a href="#about-modal" class="brand-logo center">Reci-Bits</a>
+          
+          <a href="#about-modal" class="brand-logo center"><img id="logo" src="reci.JPG" alt="recibits logo"></a>
           <ul id="nav-mobile" class="left hide-on-med-and-down">
             <li><a id="about-modal-button" class="btn modal-trigger" href="#about-modal"> 
-              About Reci-Bits 
+              About
             </a></li>
            
           </ul>
