fix about reci-bits button to be responsive

--- a/index.html
+++ b/index.html
@@ -36,16 +36,18 @@
       <nav>
         <div class="nav-wrapper">
           <a href="#about-modal" class="brand-logo center">RECI-BITS</a>
+          <a href="#" data-target="dropdown1" class="sidenav-trigger dropdown-trigger"><i class="material-icons">menu</i></a>
           <ul id="nav-mobile" class="left hide-on-med-and-down">
             <li><a id="about-modal-button" class="btn modal-trigger" href="#about-modal"> 
               About Reci-Bits 
             </a></li>
-           
           </ul>
         </div>
       </nav>
 
-      
+      <ul id='dropdown1' class='dropdown-content'>
+        <li><a class="modal-trigger" href="#about-modal" id="dropdown-text">About Reci-Bits</a></li>
+      </ul>
 
 
       <!-- Search bar/ input start-->
