--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <nav>
         <div class="nav-wrapper">
           
-          <a href="#about-modal" class="brand-logo center"><img id="logo" src="reci.JPG" alt="recibits logo"></a>
+          <a href="#about-modal" class="brand-logo center"><img id="logo" src="Reci-bits.png" alt="recibits logo"></a>
           <ul id="nav-mobile" class="left hide-on-med-and-down">
             <li><a id="about-modal-button" class="btn modal-trigger" href="#about-modal"> 
               About
