fix "get recipe" animate button, add scrollbar style, hide left right arrow when viewport width less than 600px

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <!-- the ingredient input goes here -->
                 
               </div>
-              <a class="btn-small" id="get-recipe-button" >Get Recipes</a>
+              <a class="btn-small" id="get-recipe-button" href="#recipe-list-container" >Get Recipes</a>
             </div>
           </div>
           <div class="col s1 m2 l3 xl3"></div>
