--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class="bodyContainer"> 
      
-
+      <!-- Nav bar including title w/logo and about link -->
       <nav>
         <div class="nav-wrapper">
           
