About css styling

--- a/index.html
+++ b/index.html
@@ -116,15 +116,27 @@
     <!-- Modal for About Reci-Bits -->
     <div id="about-modal" class="modal">
       <div class="modal-header" id="about-modal-header">
-        About Reci-Bits
+        <h4>About Reci-Bits</h4>
+        
       </div>
       <div class="modal-content" id="about-modal-content">
-        <p>Reci-Bits is a web app to search recipe and nutrition information by using APIs.<br>
-          To use the functionality first you need to type items or ingredients (from your fridge or pantry) one at a time<br>
-          Then when you click on the add button, it will be transferred to another textbox-the searchbox. <br>
-          After this, you need to click on the search button, you will be presented with 12 food (or drink) menu.<br>
-          And when you click on the title or the image of the food (or drink), it will take you to a new page with detail recipe of that item.<br>
-          Thank you for visiting here, and enjoy the food (or drink) <h3>&#128523;</h3> 
+        <p style="text-align:left;">Reci-Bits is a web app designed to search recipe and nutrition information using API's.<br>
+          How to use:
+        </p>
+          <ul style="text-align:left; margin-left:20px;" >
+            <li style="list-style-type: circle;">First type ingredients (from your fridge or pantry) into the "What is in your Fridge?" box.</li>
+            <li style="list-style-type: circle;">Then when you click on the add button (or enter), it will be transferred to another textbox; the searchbox.</li>
+            <li style="list-style-type: circle;">After you have added all the ingredients, you need to click on the "Get Recipes" button, you will then be presented with 12 food (or drink) menu.</li>
+            <li style="list-style-type: circle;">When you click on the title or the image of the food (or drink), it will take you to a new page with a detailed recipe of that item.</li>
+          </ul>
+          <p style="text-align:left;">
+           <br>
+          Please note that searches are optimised with less than 5 ingredients. 
+          <br>
+          <br>
+          Thank you for visiting Reci-Bits, we hope you enjoy the food (or drink)!
+          <br>
+          <h3>&#128523;</h3> 
           </p>
       </div>
       <div class="modal-footer">
