fixed display error

--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
               <div class="row" id="row2-search-text">
                 <div class="input-field col">
                   <input id="textarea1" class="materialize-textarea" placeholder="What is in your Fridge?"></input>
-                  <div class="autocom-box">
+                  <ul class="autocom-box">
                     <li>lol</li>
                     <li>harr</li>
                     <li>potter</li>
                     <li></li>
                     <li></li>
-                  </div>
+                  </ul>
                   <button id="btnadd" type="button"><i class="fas fa-plus"></i> </button>
                 </div>
                 
